<resources>
    <string name="app_name">Gerenciador de Estoque</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Login -->
    <string name="email">E-Mail:</string>
    <string name="password">Senha:</string>
    <string name="email_hint">E-Mail</string>
    <string name="password_hint">Senha</string>

    <!-- Main menu -->
    <string name="menu_title">O que deseja fazer?</string>
    <string name="create">Cadastrar produto</string>
    <string name="list">Listar produtos</string>
    <string name="update">Alterar produtos</string>
    <string name="delete">Deletar produtos</string>

    <!-- Create | Detail -->
    <string name="code_label">Código do produto</string>
    <string name="name_label">Nome do produto</string>
    <string name="description_label">Descrição do produto</string>
    <string name="quantity_label">Estoque</string>
    <string name="save_form">Salvar</string>
    <string name="delete_product">Deletar</string>
    <string name="update_product">Alterar</string>
    <string name="invalid_form_feedback">Todos os campos são obrigatórios</string>
    <string name="success_feedback">Produto adicionado com sucesso</string>

    <!-- list -->
    <string name="list_title">Lista de produtos</string>

    <!-- common -->
    <string name="back">Voltar</string>
    <string name="reset_form">Limpar</string>
</resources>